--- a/src/test/resources/dbunit.yml
+++ b/src/test/resources/dbunit.yml
@@ -1,7 +1,7 @@
 cacheConnection: false
 cacheTableNames: false
 properties:
-  schema: my_db
+  schema: users
   caseInsensitiveStrategy: LOWERCASE
   connectionConfig:
     url: "jdbc:mysql://localhost:3306/my_db"
