fix: UserMapperTest　selectAll-test.yml 修正

--- a/src/test/resources/dbunit.yml
+++ b/src/test/resources/dbunit.yml
@@ -1,7 +1,7 @@
 cacheConnection: false
 cacheTableNames: false
 properties:
-  schema: users
+  schema: tests
   caseInsensitiveStrategy: LOWERCASE
   connectionConfig:
     url: "jdbc:mysql://localhost:3306/my_db"
