--- a/src/test/resources/test/dbunit.yml
+++ b/src/test/resources/test/dbunit.yml
@@ -1,8 +1,8 @@
-cacheConnection: true
+cacheConnection: false
 cacheTableNames: false
+caseInsensitiveStrategy: LOWERCASE
 properties:
-  schema: tests
-  caseInsensitiveStrategy: LOWERCASE
+  schema: my_db
   connectionConfig:
     url: "jdbc:mysql://localhost:3306/my_db"
     user: "root"
