--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,16 @@ server:
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_db
+    url: jdbc:mysql://localhost:3306/product
     username: root
     password: sei1025jitu7z
+
   sql:
     init:
       mode: always
+  h2:
+    console:
+
+
 mybatis:
   mapper-locations: classpath*:/com/example/mapper/*.xml
